fix: up mobile legend layout threshold, align popup buttons to contents
Changing this based on feedback.

--- a/modules/core/css/components/ControlsLayout.less
+++ b/modules/core/css/components/ControlsLayout.less
@@ -11,7 +11,7 @@
         display: flex;
     }
 
-    @media screen and ( max-width: calc( @width-breakpoint-tablet * 0.7 ) ) {
+    @media screen and ( max-width: calc( @width-breakpoint-tablet * 0.8 ) ) {
         display: flex;
         flex-direction: column;
         align-items: center;
