--- a/modules/core/css/components/Popups.less
+++ b/modules/core/css/components/Popups.less
@@ -71,7 +71,7 @@
     .ext-datamaps-popup-tools {
         display: flex;
         flex-wrap: wrap;
-        margin: 8px -8px -8px;
+        margin: 8px -2px -7px;
         gap: 0.5em;
         list-style: none;
 
